# Compiler

./: .gitignore  BoaCompiler  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compiler  run.sh
code/: Compilers.c  Compilers.h  MainParser.c  MainReader.c  MainScanner.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h
doc/compiler/: compiler.md
include/: Compilers.h  Parser.h  Reader.h  Scanner.h
input/: INPUT1_Hello.nag  INPUT2_Volume.nag  test.nag
src/: Compilers.c  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Reader.c  Scanner.c
tests/: CMakeLists.txt  reader_tests.c
